# aws-s3-streaming

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
s3stream/: __init__.py  download.py  resume.py  upload.py
tests/: test_upload.py
