[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-s3-streaming"
version = "0.1.0"
description = "Streaming upload/download library for large S3 objects with multipart and resumability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "moto[s3]>=4.2",
]
